# Classification-of-customer-requests-in-the-banking-sector

./: .dockerignore  .gitignore  README.md  docker-compose.yml  mlflow.db  pyproject.toml
.github/workflows/: tests.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/core/: config.py  logger.py
backend/app/dependencies/: model_loader.py
backend/app/schemas/: request.py  response.py
backend/app/services/: inference_servic.py  model_service.py
config/: settings.py
data/processed/: test_df.csv  train_df.csv  val_df.csv
mlflow_config/: logging.py  registry.py  staging.py  tracking.py
notebooks/: classic_ml.ipynb  eda.ipynb  research.ipynb
reports/: distilbert_error_analysis.csv
services/backend/: Dockerfile  pyproject.toml
services/backend/app/: main.py
services/backend/app/api/v1/: health.py  mlflow_models.py  model_info.py  models.py  predict.py
services/backend/app/schemas/: request.py  response.py
services/backend/app/services/: model_service.py
services/frontend/: Dockerfile  backend_client.py  streamlit_app.py
services/frontend/pages/: home_page.py  models_info_page.py  prediction_page.py
services/frontend/styles/: common.css  home_page.css  load_css.py  models_info_page.css  prediction_page.css
services/minio/: init_minio.sh
services/mlflow/: Dockerfile  start_mlflow.sh
src/config/: settings.py
src/data/: collate.py  dataset.py  tokenizer.py  transformer_dataset.py
src/evaluation/: evaluate_rnn.py
src/evaluation/classical/: __init__.py  evaluate_classical.py
src/evaluation/transformers/: error_analyzer.py  evaluate.py  run_error_analysis.py
src/features/: tokenizer.py
src/mlflow_model/: artifacts.py  log_pyfunc_model.py  pyfunc_model.py
src/mlops/: __init__.py
src/training/: train_one_epoch.py  train_rnn.py
tests/: conftest.py
tests/api/: test_backend_api.py
tests/unit/: test_mlflow_helpers.py  test_model_service.py  test_request_schema.py
(+24 files in other folders)
