[project]
name = "banking77-backend"
package-mode = false
version = "0.1.0"
description = "Virtual environment for backend"
authors = [
    {name = "KiriLLchik07",email = "kirill3456777@mail.ru"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "transformers (>=5.3.0,<6.0.0)",
    "mlflow (>=3.10.1,<4.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
